--- a/webapp/main.html
+++ b/webapp/main.html
@@ -9,6 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <title></title>
     <link href="scripts/DQX/DQXCommon.css" rel="stylesheet" type="text/css" />
+    <link href="scripts/DQX/Externals/spectrum.css" rel="stylesheet" type="text/css" />
 
     <!-- Introduce a version number to avoid cache problems between versions-->
     <script type="text/javascript">
@@ -20,6 +21,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=false" type="text/javascript"></script>
     <script src="scripts/Local/_SetServerUrl.js" type="text/javascript"></script>
     <script data-main="scripts/main" src="scripts/require.js" type="text/javascript"></script>
+    <!--<script src="scripts/DQX/Externals/spectrum.js"></script>-->
     <!--<script data-main="scripts/main-built" src="scripts/require.js" type="text/javascript"></script>-->
 
 </head>
