--- a/webapp/main.html
+++ b/webapp/main.html
@@ -33,7 +33,7 @@
         <img src="Bitmaps/ProgressAnimation3.gif" alt="Progress animation" />
     </div>
 </div>
-<!--The following div needs to be present for system usage:-->
+<!--The following divs needs to be present for system usage:-->
 <div id="DQXUtilContainer" ></div>
 
 
